--- a/mirrors.yaml
+++ b/mirrors.yaml
@@ -1,36 +1,92 @@
-mirrors:
-  - url: 'https://mirrors.mit.edu/parrot'
-  - url: 'https://mirror.clarkson.edu/parrot'
-  - url: 'https://ftp.osuosl.org/pub/parrotos'
-  - url: 'https://mirrors.ocf.berkeley.edu/parrot'
-  - url: 'https://muug.ca/mirror/parrot'
-  - url: 'https://mirror.cedia.org.ec/parrot'
-  - url: 'https://mirror.uta.edu.ec/parrot'
-  - url: 'http://mirror.ueb.edu.ec/parrot'
-  - url: 'http://sft.if.usp.br/parrot'
-  - url: 'https://parrot.mirror.garr.it/parrot'
-  - url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-  - url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-  - url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-  - url: 'https://ftp.acc.umu.se/mirror/parrotsec.org/parrot'
-  - url: 'https://ftp.cc.uoc.gr/mirrors/linux/parrot'
-  - url: 'https://ftp.belnet.be/pub/archive.parrotsec.org/'
-  - url: 'https://matojo.unizar.es/parrot'
-  - url: 'https://mirrors.up.pt/parrot'
-  - url: 'https://mirrors.dotsrc.org/parrot'
-  - url: 'https://parrot.mirror.cythin.com/parrot'
-  - url: 'https://quantum-mirror.hu/mirrors/pub/parrot'
-  - url: 'https://mirror.yandex.ru/mirrors/parrot'
-  - url: 'http://mirror.truenetwork.ru/parrot'
-  - url: 'http://mirrors.comsys.kpi.ua/parrot'
-  - url: 'http://mirror.amberit.com.bd/parrotsec'
-  - url: 'https://free.nchc.org.tw/parrot'
-  - url: 'https://mirror.0x.sg/parrot'
-  - url: 'https://mirrors.ustc.edu.cn/parrot'
-  - url: 'https://mirror.kku.ac.th/parrot'
-  - url: 'http://kartolo.sby.datautama.net.id/parrot'
-  - url: 'https://mirrors.takeshi.nz/parrot'
-  - url: 'http://mirrors.shu.edu.cn/parrot'
-  - url: 'http://mirrors.sjtug.sjtu.edu.cn/parrot'
-  - url: 'http://mirror.lagoon.nc/pub/parrot'
-  - url: 'https://mirrors.tuna.tsinghua.edu.cn/parrot'
+continents:
+  EU:
+    IT:
+      mirrors:
+        - url: 'https://parrot.mirror.garr.it/parrot'
+    DE:
+      mirrors:
+        - url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
+        - url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+    NL:
+      mirrors:
+        - url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+    SE:
+      mirrors:
+        - url: 'https://ftp.acc.umu.se/mirror/parrotsec.org/parrot'
+    GR:
+      mirrors:
+        - url: 'https://ftp.cc.uoc.gr/mirrors/linux/parrot'
+    BE:
+      mirrors:
+        - url: 'https://ftp.belnet.be/pub/archive.parrotsec.org/'
+    ES:
+      mirrors:
+        - url: 'https://matojo.unizar.es/parrot'
+    PT:
+      mirrors:
+        - url: 'https://mirrors.up.pt/parrot'
+    DK:
+      mirrors:
+        - url: 'https://mirrors.dotsrc.org/parrot'
+    FR:
+      mirrors:
+        - url: 'https://parrot.mirror.cythin.com/parrot'
+    HU:
+      mirrors:
+        - url: 'https://quantum-mirror.hu/mirrors/pub/parrot'
+    RU:
+      mirrors:
+        - url: 'https://mirror.yandex.ru/mirrors/parrot'
+          blocked_countries: [ 'UA' ]
+        - url: 'http://mirror.truenetwork.ru/parrot'
+    UA:
+      mirrors:
+        - url: 'http://mirrors.comsys.kpi.ua/parrot'
+  NA:
+    US:
+      mirrors:
+        - url: 'https://mirrors.mit.edu/parrot'
+        - url: 'https://mirror.clarkson.edu/parrot'
+        - url: 'https://ftp.osuosl.org/pub/parrotos'
+        - url: 'https://mirrors.ocf.berkeley.edu/parrot'
+    CA:
+      mirrors:
+        - url: 'https://muug.ca/mirror/parrot'
+  SA:
+    EC:
+      mirrors:
+        - url: 'https://mirror.cedia.org.ec/parrot'
+        - url: 'https://mirror.uta.edu.ec/parrot'
+        - url: 'http://mirror.ueb.edu.ec/parrot'
+    BR:
+      mirrors:
+        - url: 'http://sft.if.usp.br/parrot'
+  AS:
+    BD:
+      mirrors:
+        - url: 'http://mirror.amberit.com.bd/parrotsec'
+    TW:
+      mirrors:
+        - url: 'https://free.nchc.org.tw/parrot'
+    SG:
+      mirrors:
+        - url: 'https://mirror.0x.sg/parrot'
+    CN:
+      mirrors:
+        - url: 'https://mirrors.ustc.edu.cn/parrot'
+        - url: 'http://mirrors.shu.edu.cn/parrot'
+        - url: 'http://mirrors.sjtug.sjtu.edu.cn/parrot'
+        - url: 'https://mirrors.tuna.tsinghua.edu.cn/parrot'
+    TH:
+      mirrors:
+        - url: 'https://mirror.kku.ac.th/parrot'
+    ID:
+      mirrors:
+        - url: 'http://kartolo.sby.datautama.net.id/parrot'
+  OC:
+    NZ:
+      mirrors:
+        - url: 'https://mirrors.takeshi.nz/parrot'
+    NC:
+      mirrors:
+        - url: 'http://mirror.lagoon.nc/pub/parrot'
