--- a/mirrors.yaml
+++ b/mirrors.yaml
@@ -2,91 +2,127 @@ continents:
   EU:
     IT:
       mirrors:
-        - url: 'https://parrot.mirror.garr.it/parrot'
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
     DE:
       mirrors:
-        - url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-        - url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+        - name: 'emea.halifax'
+          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
+        - name: 'emea.esslingen'
+          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
     NL:
       mirrors:
-        - url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
     SE:
       mirrors:
-        - url: 'https://ftp.acc.umu.se/mirror/parrotsec.org/parrot'
+        - name: 'emea.umu'
+          url: 'https://ftp.acc.umu.se/mirror/parrotsec.org/parrot'
     GR:
       mirrors:
-        - url: 'https://ftp.cc.uoc.gr/mirrors/linux/parrot'
+        - name: 'emea.uoc'
+          url: 'https://ftp.cc.uoc.gr/mirrors/linux/parrot'
     BE:
       mirrors:
-        - url: 'https://ftp.belnet.be/pub/archive.parrotsec.org/'
+        - name: 'emea.belnet'
+          url: 'https://ftp.belnet.be/pub/archive.parrotsec.org/'
     ES:
       mirrors:
-        - url: 'https://matojo.unizar.es/parrot'
+        - name: 'emea.osluz'
+          url: 'https://matojo.unizar.es/parrot'
     PT:
       mirrors:
-        - url: 'https://mirrors.up.pt/parrot'
+        - name: 'emea.up'
+          url: 'https://mirrors.up.pt/parrot'
     DK:
       mirrors:
-        - url: 'https://mirrors.dotsrc.org/parrot'
+        - name: 'emea.dotsrc'
+          url: 'https://mirrors.dotsrc.org/parrot'
     FR:
       mirrors:
-        - url: 'https://parrot.mirror.cythin.com/parrot'
+        - name: 'emea.cythin'
+          url: 'https://parrot.mirror.cythin.com/parrot'
     HU:
       mirrors:
-        - url: 'https://quantum-mirror.hu/mirrors/pub/parrot'
+        - name: 'emea.quantum'
+          url: 'https://quantum-mirror.hu/mirrors/pub/parrot'
     RU:
       mirrors:
-        - url: 'https://mirror.yandex.ru/mirrors/parrot'
+        - name: 'apac.yandex'
+          url: 'https://mirror.yandex.ru/mirrors/parrot'
           blocked_countries: [ 'UA' ]
-        - url: 'http://mirror.truenetwork.ru/parrot'
+
+        - name: 'apac.truenetwork'
+          url: 'http://mirror.truenetwork.ru/parrot'
     UA:
       mirrors:
-        - url: 'http://mirrors.comsys.kpi.ua/parrot'
+        - name: 'emea.comsys'
+          url: 'http://mirrors.comsys.kpi.ua/parrot'
   NA:
     US:
       mirrors:
-        - url: 'https://mirrors.mit.edu/parrot'
-        - url: 'https://mirror.clarkson.edu/parrot'
-        - url: 'https://ftp.osuosl.org/pub/parrotos'
-        - url: 'https://mirrors.ocf.berkeley.edu/parrot'
+        - name: 'ncsa.mit'
+          url: 'https://mirrors.mit.edu/parrot'
+        - name: 'ncsa.clarkson'
+          url: 'https://mirror.clarkson.edu/parrot'
+        - name: 'ncsa.osuosl'
+          url: 'https://ftp.osuosl.org/pub/parrotos'
+        - name: 'ncsa.berkeley'
+          url: 'https://mirrors.ocf.berkeley.edu/parrot'
     CA:
       mirrors:
-        - url: 'https://muug.ca/mirror/parrot'
+        - name: 'ncsa.muug'
+          url: 'https://muug.ca/mirror/parrot'
   SA:
     EC:
       mirrors:
-        - url: 'https://mirror.cedia.org.ec/parrot'
-        - url: 'https://mirror.uta.edu.ec/parrot'
-        - url: 'http://mirror.ueb.edu.ec/parrot'
+        - name: 'ncsa.cedia'
+          url: 'https://mirror.cedia.org.ec/parrot'
+        - name: 'ncas.uta'
+          url: 'https://mirror.uta.edu.ec/parrot'
+        - name: 'ncsa.ueb'
+          url: 'http://mirror.ueb.edu.ec/parrot'
     BR:
       mirrors:
-        - url: 'http://sft.if.usp.br/parrot'
+        - name: 'ncsa.usp'
+          url: 'http://sft.if.usp.br/parrot'
   AS:
     BD:
       mirrors:
-        - url: 'http://mirror.amberit.com.bd/parrotsec'
+        - name: 'apac.amberit'
+          url: 'http://mirror.amberit.com.bd/parrotsec'
     TW:
       mirrors:
-        - url: 'https://free.nchc.org.tw/parrot'
+        - name: 'apac.nchc'
+          url: 'https://free.nchc.org.tw/parrot'
     SG:
       mirrors:
-        - url: 'https://mirror.0x.sg/parrot'
+        - name: 'apac.0x'
+          url: 'https://mirror.0x.sg/parrot'
     CN:
       mirrors:
-        - url: 'https://mirrors.ustc.edu.cn/parrot'
-        - url: 'http://mirrors.shu.edu.cn/parrot'
-        - url: 'http://mirrors.sjtug.sjtu.edu.cn/parrot'
-        - url: 'https://mirrors.tuna.tsinghua.edu.cn/parrot'
+        - name: 'apac.ustc'
+          url: 'https://mirrors.ustc.edu.cn/parrot'
+        - name: 'apac.shu'
+          url: 'http://mirrors.shu.edu.cn/parrot'
+        - name: 'apac.sjtug'
+          url: 'http://mirrors.sjtug.sjtu.edu.cn/parrot'
+        - name: 'apac.tuna'
+          url: 'https://mirrors.tuna.tsinghua.edu.cn/parrot'
     TH:
       mirrors:
-        - url: 'https://mirror.kku.ac.th/parrot'
+        - name: 'apac.kku'
+          url: 'https://mirror.kku.ac.th/parrot'
     ID:
       mirrors:
-        - url: 'http://kartolo.sby.datautama.net.id/parrot'
+        - name: 'apac.datautama'
+          url: 'http://kartolo.sby.datautama.net.id/parrot'
   OC:
     NZ:
       mirrors:
-        - url: 'https://mirrors.takeshi.nz/parrot'
+        - name: 'apac.takeshi'
+          url: 'https://mirrors.takeshi.nz/parrot'
     NC:
       mirrors:
-        - url: 'http://mirror.lagoon.nc/pub/parrot'
+        - name: 'apac.lagoon'
+          url: 'http://mirror.lagoon.nc/pub/parrot'
