--- a/config.yaml
+++ b/config.yaml
@@ -3,31 +3,133 @@ continents:
     MASTER:
       mirrors:
         - name: "Master"
-          url: "https://palinuro.eu-central-1.linodeobjects.com/mirrortest"
+          url: "https://mirror.parrot.sh/mirrors/parrot"
           version: 1
           down: true
   EU:
+    IT:
+      mirrors:
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
     DE:
       mirrors:
-        - name: 'linode-frankfurt'
-          url: 'https://cdn.palinuro.dev/mirrortest'
-          version: 1
-          down: true
-        - name: 'linode-invalid'
-          url: 'https://palinuro.eu-central-2.linodeobjects.com/mirrortest'
-          version: 1
-          down: true
+        - name: 'emea.halifax'
+          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
+        - name: 'emea.esslingen'
+          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+    NL:
+      mirrors:
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+    SE:
+      mirrors:
+        - name: 'emea.umu'
+          url: 'https://ftp.acc.umu.se/mirror/parrotsec.org/parrot'
+    GR:
+      mirrors:
+        - name: 'emea.uoc'
+          url: 'https://ftp.cc.uoc.gr/mirrors/linux/parrot'
+    BE:
+      mirrors:
+        - name: 'emea.belnet'
+          url: 'https://ftp.belnet.be/pub/archive.parrotsec.org/'
+    ES:
+      mirrors:
+        - name: 'emea.osluz'
+          url: 'https://matojo.unizar.es/parrot'
+    PT:
+      mirrors:
+        - name: 'emea.up'
+          url: 'https://mirrors.up.pt/parrot'
+    DK:
+      mirrors:
+        - name: 'emea.dotsrc'
+          url: 'https://mirrors.dotsrc.org/parrot'
+    FR:
+      mirrors:
+        - name: 'emea.cythin'
+          url: 'https://parrot.mirror.cythin.com/parrot'
+    HU:
+      mirrors:
+        - name: 'emea.quantum'
+          url: 'https://quantum-mirror.hu/mirrors/pub/parrot'
+    RU:
+      mirrors:
+        - name: 'apac.yandex'
+          url: 'https://mirror.yandex.ru/mirrors/parrot'
+          blocked_countries: [ 'UA' ]
+
+        - name: 'apac.truenetwork'
+          url: 'http://mirror.truenetwork.ru/parrot'
+    UA:
+      mirrors:
+        - name: 'emea.comsys'
+          url: 'http://mirrors.comsys.kpi.ua/parrot'
   NA:
     US:
       mirrors:
-        - name: 'linode-newyork'
-          url: 'https://palinuro.us-east-1.linodeobjects.com/mirrortest'
-          version: 1
-          down: true
+        - name: 'ncsa.mit'
+          url: 'https://mirrors.mit.edu/parrot'
+        - name: 'ncsa.clarkson'
+          url: 'https://mirror.clarkson.edu/parrot'
+        - name: 'ncsa.osuosl'
+          url: 'https://ftp.osuosl.org/pub/parrotos'
+        - name: 'ncsa.berkeley'
+          url: 'https://mirrors.ocf.berkeley.edu/parrot'
+    CA:
+      mirrors:
+        - name: 'ncsa.muug'
+          url: 'https://muug.ca/mirror/parrot'
+  SA:
+    EC:
+      mirrors:
+        - name: 'ncsa.cedia'
+          url: 'https://mirror.cedia.org.ec/parrot'
+        - name: 'ncas.uta'
+          url: 'https://mirror.uta.edu.ec/parrot'
+        - name: 'ncsa.ueb'
+          url: 'http://mirror.ueb.edu.ec/parrot'
+    BR:
+      mirrors:
+        - name: 'ncsa.usp'
+          url: 'http://sft.if.usp.br/parrot'
   AS:
+    BD:
+      mirrors:
+        - name: 'apac.amberit'
+          url: 'http://mirror.amberit.com.bd/parrotsec'
+    TW:
+      mirrors:
+        - name: 'apac.nchc'
+          url: 'https://free.nchc.org.tw/parrot'
     SG:
       mirrors:
-        - name: 'linode-singapore'
-          url: 'https://palinuro.ap-south-1.linodeobjects.com/mirrortest'
-          version: 1
-          down: true
+        - name: 'apac.0x'
+          url: 'https://mirror.0x.sg/parrot'
+    CN:
+      mirrors:
+        - name: 'apac.ustc'
+          url: 'https://mirrors.ustc.edu.cn/parrot'
+        - name: 'apac.shu'
+          url: 'http://mirrors.shu.edu.cn/parrot'
+        - name: 'apac.sjtug'
+          url: 'http://mirrors.sjtug.sjtu.edu.cn/parrot'
+        - name: 'apac.tuna'
+          url: 'https://mirrors.tuna.tsinghua.edu.cn/parrot'
+    TH:
+      mirrors:
+        - name: 'apac.kku'
+          url: 'https://mirror.kku.ac.th/parrot'
+    ID:
+      mirrors:
+        - name: 'apac.datautama'
+          url: 'http://kartolo.sby.datautama.net.id/parrot'
+  OC:
+    NZ:
+      mirrors:
+        - name: 'apac.takeshi'
+          url: 'https://mirrors.takeshi.nz/parrot'
+    NC:
+      mirrors:
+        - name: 'apac.lagoon'
+          url: 'http://mirror.lagoon.nc/pub/parrot'
