update master over time

--- a/config.yaml
+++ b/config.yaml
@@ -3,13 +3,16 @@ continents:
     MASTER:
       mirrors:
         - name: "Master"
-          url: "https://mirror.parrot.sh/mirrors/parrot"
+          url: "https://deb.parrot.sh/mirrors/parrot"
           index: index.db
           version: 9999
           down: false
   DEFAULT:
     DEFAULT:
       mirrors:
+        - name: 'cdn.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+          index: index.db
         - name: 'ncsa.wasabi-virginia'
           url: 'https://s3.us-east-2.wasabisys.com/parrot-virginia'
           index: index.db
@@ -22,16 +25,40 @@ continents:
         - name: 'ncsa.wasabi-tokyo'
           url: 'https://s3.ap-northeast-1.wasabisys.com/parrot-tokyo'
           index: index.db
+        - name: 'ncsa.wasabi-amsterdam'
+          url: 'https://s3.eu-central-1.wasabisys.com/parrot-virginia'
+          index: index.db
         - name: 'emea.halifax'
           url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
           index: index.db
         - name: 'emea.esslingen'
           url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
           index: index.db
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+          index: index.db
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
+          index: index.db
   EU:
+    DEFAULT:
+      mirrors:
+        - name: 'emea.wasabi-amsterdam'
+          url: 'https://s3.eu-central-1.wasabisys.com/parrot-amsterdam'
+          index: index.db
+        - name: 'emea.halifax'
+          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
+          index: index.db
+        - name: 'emea.esslingen'
+          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+          index: index.db
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+          index: index.db
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
+          index: index.db
     # disabled: redirector not ready for iso-only mirrors
-    #DEFAULT:
-    #  mirrors:
     #    - name: emea.linode-frankfurt
     #      url: https://parrot.eu-central-1.linodeobjects.com/parrot
     #      index: index.db.iso
@@ -58,6 +85,9 @@ continents:
           index: index.db
         - name: emea.lyrahosting
           url: https://mirror.lyrahosting.com/parrot
+          index: index.db
+        - name: 'emea.wasabi-amsterdam'
+          url: 'https://s3.eu-central-1.wasabisys.com/parrot-amsterdam'
           index: index.db
     SE:
       mirrors:
@@ -127,19 +157,23 @@ continents:
     #    - name: 'emea.comsys'
     #      url: 'http://mirrors.comsys.kpi.ua/parrot'
     #      index: index.db.iso
-  NA:
-    # disabled: redirector not ready for iso-only mirrors
-    #DEFAULT:
-    #  mirrors:
-    #    - name: emea.linode-newyork
-    #      url: https://parrot.us-east-1.linodeobjects.com/parrot
-    #      index: index.db.iso
-    CA:
+  AF:
+    DEFAULT:
       mirrors:
-        - name: ncsa.0xem
-          url: https://mirror.0xem.ma/parrot/
+        - name: 'emea.halifax'
+          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
           index: index.db
-    US:
+        - name: 'emea.esslingen'
+          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+          index: index.db
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+          index: index.db
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
+          index: index.db
+  NA:
+    DEFAULT:
       mirrors:
         - name: 'ncsa.wasabi-virginia'
           url: 'https://s3.us-east-2.wasabisys.com/parrot-virginia'
@@ -150,6 +184,17 @@ continents:
         - name: 'ncsa.wasabi-texas'
           url: 'https://s3.us-central-1.wasabisys.com/parrot-texas'
           index: index.db
+    # disabled: redirector not ready for iso-only mirrors
+    #    - name: emea.linode-newyork
+    #      url: https://parrot.us-east-1.linodeobjects.com/parrot
+    #      index: index.db.iso
+    CA:
+      mirrors:
+        - name: ncsa.0xem
+          url: https://mirror.0xem.ma/parrot/
+          index: index.db
+    US:
+      mirrors:
         - name: 'ncsa.mit'
           url: 'https://mirrors.mit.edu/parrot'
           index: index.db
@@ -163,6 +208,26 @@ continents:
           url: 'https://mirrors.ocf.berkeley.edu/parrot'
           index: index.db
   SA:
+    DEFAULT:
+      mirrors:
+        - name: 'cdn.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+          index: index.db
+        - name: 'ncsa.wasabi-virginia'
+          url: 'https://s3.us-east-2.wasabisys.com/parrot-virginia'
+          index: index.db
+        - name: 'ncsa.wasabi-oregon'
+          url: 'https://s3.us-west-1.wasabisys.com/parrot-oregon'
+          index: index.db
+        - name: 'ncsa.wasabi-texas'
+          url: 'https://s3.us-central-1.wasabisys.com/parrot-texas'
+          index: index.db
+        - name: 'ncsa.berkeley'
+          url: 'https://mirrors.ocf.berkeley.edu/parrot'
+          index: index.db
+        - name: 'ncsa.mit'
+          url: 'https://mirrors.mit.edu/parrot'
+          index: index.db
     EC:
       mirrors:
         - name: 'ncsa.cedia'
@@ -180,9 +245,15 @@ continents:
           url: 'http://sft.if.usp.br/parrot'
           index: index.db
   AS:
+    DEFAULT:
+      mirrors:
+        - name: 'cdn.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+          index: index.db
+        - name: 'ncsa.wasabi-tokyo'
+          url: 'https://s3.ap-northeast-1.wasabisys.com/parrot-tokyo'
+          index: index.db
     # disabled: redirector not ready for iso-only mirrors
-    #DEFAULT:
-    #  mirrors:
     #    - name: emea.linode-singapore
     #      url: https://parrot.ap-south-1.linodeobjects.com/parrot
     #      index: index.db.iso
@@ -192,6 +263,14 @@ continents:
     #    - name: 'apac.amberit'
     #      url: 'http://mirror.amberit.com.bd/parrotsec'
     #      index: index.db
+    IN:
+      mirrors:
+        - name: 'apac.0x'
+          url: 'https://mirror.0x.sg/parrot'
+          index: index.db
+        - name: 'apac.nchc'
+          url: 'https://free.nchc.org.tw/parrot'
+          index: index.db
     TW:
       mirrors:
         - name: 'apac.nchc'
@@ -232,6 +311,9 @@ continents:
         - name: 'apac.kku'
           url: 'https://mirror.kku.ac.th/parrot'
           index: index.db
+        - name: 'apac.nipacloud'
+          url: 'https://mirrors.nipa.cloud/parrot'
+          index: index.db
     # disabled: no https support
     #ID:
     #  mirrors:
@@ -239,9 +321,21 @@ continents:
     #      url: 'http://kartolo.sby.datautama.net.id/parrot'
     #      index: index.db
   OC:
+    DEFAULT:
+      mirrors:
+        - name: 'cdn.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+          index: index.db
+        - name: 'ncsa.wasabi-tokyo'
+          url: 'https://s3.ap-northeast-1.wasabisys.com/parrot-tokyo'
+          index: index.db
+        - name: 'apac.0x'
+          url: 'https://mirror.0x.sg/parrot'
+          index: index.db
+        - name: 'apac.nchc'
+          url: 'https://free.nchc.org.tw/parrot'
+          index: index.db
     # disabled: redirector not ready for iso-only mirrors
-    #DEFAULT:
-    #  mirrors:
     #    - name: emea.linode-singapore
     #      url: https://parrot.ap-south-1.linodeobjects.com/parrot
     #      index: index.db.iso
