--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ continents:
     MASTER:
       mirrors:
         - name: "Master"
-          url: "https://deb.parrot.sh/mirrors/parrot"
+          url: "https://deb.parrot.sh/direct/parrot"
           index: vindex.db
           version: 9999
           down: false
