update redirector config

--- a/config.yaml
+++ b/config.yaml
@@ -10,14 +10,11 @@ continents:
   DEFAULT:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'azure'
+          url: 'https://azure.deb.parrot.sh/parrot'
           index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
@@ -37,15 +34,6 @@ continents:
   EU:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -61,16 +49,10 @@ continents:
         - name: 'emea.garr'
           url: 'https://parrot.mirror.garr.it/parrot'
           index: vindex.db
-        - name: emea.linode-frankfurt
-          url: https://parrot.eu-central-1.linodeobjects.com/parrot
-          index: vindex.db
     IT:
       mirrors:
         - name: 'emea.garr'
           url: 'https://parrot.mirror.garr.it/parrot'
-          index: vindex.db
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
           index: vindex.db
         - name: 'emea.halifax'
           url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
@@ -160,15 +142,6 @@ continents:
     #      index: vindex.db.iso
     RU:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -180,20 +153,11 @@ continents:
           url: https://mirror.surf/parrot
           index: vindex.db
         - name: 'apac.truenetwork'
-          url: 'http://mirror.truenetwork.ru/parrot'
+          url: 'https://mirror.truenetwork.ru/parrot'
           index: vindex.db
   AF:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -212,15 +176,6 @@ continents:
   NA:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: ncsa.0xem
           url: https://mirror.0xem.ma/parrot/
           index: vindex.db
@@ -239,15 +194,6 @@ continents:
   SA:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -276,15 +222,6 @@ continents:
           index: vindex.db
     BR:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -294,29 +231,11 @@ continents:
   AS:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
     BD:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -325,15 +244,6 @@ continents:
           index: vindex.db
     IN:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -343,22 +253,40 @@ continents:
         - name: 'apac.nchc'
           url: 'https://free.nchc.org.tw/parrot'
           index: vindex.db
+        - name: 'emea.halifax'
+          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
+          index: vindex.db
+        - name: 'emea.esslingen'
+          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+          index: vindex.db
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+          index: vindex.db
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
+          index: vindex.db
     IR:
       mirrors:
         - name: 'apac.mobinhost'
           url: 'https://mirrors.mobinhost.com/parrot/'
           index: vindex.db
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
+        - name: 'emea.halifax'
+          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
+          index: vindex.db
+        - name: 'emea.esslingen'
+          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+          index: vindex.db
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+          index: vindex.db
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
+          index: vindex.db
     TW:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -367,9 +295,6 @@ continents:
           index: vindex.db
     SG:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -378,9 +303,6 @@ continents:
           index: vindex.db
     KR:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -389,9 +311,6 @@ continents:
           index: vindex.db
     CN:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -409,9 +328,6 @@ continents:
           index: vindex.db
     TH:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -423,9 +339,6 @@ continents:
           index: vindex.db
     ID:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -435,15 +348,6 @@ continents:
   OC:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
-          index: vindex.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -453,14 +357,8 @@ continents:
         - name: 'apac.nchc'
           url: 'https://free.nchc.org.tw/parrot'
           index: vindex.db
-        - name: emea.linode-singapore
-          url: https://parrot.ap-south-1.linodeobjects.com/parrot
-          index: vindex.db
     NZ:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
@@ -469,9 +367,6 @@ continents:
           index: vindex.db
     NC:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
-          index: vindex.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
           index: vindex.db
