--- a/config-iso.yaml
+++ b/config-iso.yaml
@@ -10,14 +10,20 @@ continents:
   DEFAULT:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.iso.db
-        - name: 'edge2'
-          url: 'https://edge2.parrot.run/parrot'
+        - name: 'emea.halifax'
+          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
           index: vindex.iso.db
-        - name: 'edge3'
-          url: 'https://edge3.parrot.run/parrot'
+        - name: 'emea.esslingen'
+          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
+          index: vindex.iso.db
+        - name: 'emea.nluug'
+          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
+          index: vindex.iso.db
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
           index: vindex.iso.db
         - name: 'apac.alibaba'
           url: 'https://mirrors.aliyun.com/parrot/'
@@ -26,38 +32,38 @@ continents:
   EU:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.iso.db
 
   AF:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.iso.db
   NA:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.iso.db
   SA:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.iso.db
   AS:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.iso.db
   OC:
     DEFAULT:
       mirrors:
-        - name: 'edge1'
-          url: 'https://edge1.parrot.run/parrot'
+        - name: 'bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
           index: vindex.iso.db
         
