--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,372 +4,335 @@ continents:
       mirrors:
         - name: "Master"
           url: "https://deb.parrot.sh/direct/parrot"
-          index: vindex.db
+
           version: 9999
           down: false
   DEFAULT:
     DEFAULT:
       mirrors:
-        - name: 'azure'
-          url: 'https://azure.deb.parrot.sh/parrot'
-          index: vindex.db
-        - name: 'bunny'
+        - name: 'geo.bunny'
           url: 'https://bunny.deb.parrot.sh/parrot'
-          index: vindex.db
-        - name: 'apac.alibaba'
+        - name: "geo.parrot"
+          url: "https://deb.parrot.sh/direct/parrot"
+        - name: 'geo.rfc2549'
+          url: 'https://mirror.rfc2549.network'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'emea.halifax'
-          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-          index: vindex.db
-        - name: 'emea.esslingen'
-          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-          index: vindex.db
-        - name: 'emea.nluug'
-          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-          index: vindex.db
-        - name: 'emea.garr'
-          url: 'https://parrot.mirror.garr.it/parrot'
-          index: vindex.db
+
   EU:
     DEFAULT:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+        - name: "geo.parrot"
+          url: "https://deb.parrot.sh/direct/parrot"
+        - name: 'geo.rfc2549'
+          url: 'https://mirror.rfc2549.network'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'emea.halifax'
-          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-          index: vindex.db
         - name: 'emea.esslingen'
           url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-          index: vindex.db
         - name: 'emea.nluug'
           url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-          index: vindex.db
         - name: 'emea.garr'
           url: 'https://parrot.mirror.garr.it/parrot'
-          index: vindex.db
+        - name: 'emea.umu'
+          url: 'https://mirror.accum.se/mirror/parrotsec.org/parrot/'
+        - name: 'emea.bahnhof'
+          url: 'https://mirror.bahnhof.net/pub/parrot/'
+        - name: 'emea.belnet'
+          url: 'https://ftp.belnet.be/pub/archive.parrotsec.org'
+        - name: 'emea.dotsrc'
+          url: 'https://mirrors.dotsrc.org/parrot'
+
     IT:
       mirrors:
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+
+        - name: 'geo.rfc2549'
+          url: 'https://milan.mirror.rfc2549.network'
+
         - name: 'emea.garr'
           url: 'https://parrot.mirror.garr.it/parrot'
-          index: vindex.db
-        - name: 'emea.halifax'
-          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-          index: vindex.db
-        - name: 'emea.esslingen'
-          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-          index: vindex.db
-        - name: 'emea.nluug'
-          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-          index: vindex.db
+
     DE:
       mirrors:
-        - name: 'emea.halifax'
-          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-          index: vindex.db
+        - name: 'geo.rfc2549'
+        - url: 'https://frankfurt.mirror.rfc2549.network'
         - name: 'emea.esslingen'
           url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-          index: vindex.db
-        - name: emea.pyratelan
-          url: https://mirror.pyratelan.org/parrot
-          index: vindex.db
+        - name: 'emea.pyratelan'
+          url: 'https://mirror.pyratelan.org/parrot'
+        - name: 'emea.diyarciftci'
+          url: 'https://mirror.diyarciftci.xyz/parrot'
+
     NL:
       mirrors:
         - name: 'emea.nluug'
           url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-          index: vindex.db
-        - name: emea.lyrahosting
-          url: https://mirror.lyrahosting.com/parrot
-          index: vindex.db
+        - name: 'emea.vulnseeker'
+          url: 'https://mirror.vulnseeker.org/pub/parrot/'
+        - name: 'emea.lyrahosting'
+          url: 'https://mirror.lyrahosting.com/parrot'
+
     SE:
       mirrors:
         - name: 'emea.umu'
-          url: 'https://ftp.acc.umu.se/mirror/parrotsec.org/parrot'
-          index: vindex.db
+          url: 'https://mirror.accum.se/mirror/parrotsec.org/parrot'
+        - name: 'emea.bahnhof'
+          url: 'https://mirror.bahnhof.net/pub/parrot/'
+        - name: 'emea.it-detektiven'
+          url: 'https://parrot.midvault.nu/'
+
+    FI:
+      mirrors:
+        - name: 'emea.clientvps'
+          url: 'https://mirror.clientvps.com/parrot/'
+
     GR:
       mirrors:
         - name: 'emea.uoc'
           url: 'https://ftp.cc.uoc.gr/mirrors/linux/parrot'
-          index: vindex.db
+
     BE:
       mirrors:
         - name: 'emea.belnet'
           url: 'https://ftp.belnet.be/pub/archive.parrotsec.org'
-          index: vindex.db
+
     ES:
       mirrors:
         - name: 'emea.osluz'
           url: 'https://matojo.unizar.es/parrot'
-          index: vindex.db
+
     PT:
       mirrors:
         - name: 'emea.up'
           url: 'https://mirrors.up.pt/parrot'
-          index: vindex.db
+
+    BG:
+      mirrors:
+        - name: 'emea.telepoint'
+          url: 'https://mirror.telepoint.bg/parrot'
+
     DK:
       mirrors:
         - name: 'emea.dotsrc'
           url: 'https://mirrors.dotsrc.org/parrot'
-          index: vindex.db
-    FR:
-      mirrors:
-        - name: 'emea.cythin'
-          url: 'https://parrot.mirror.cythin.com/parrot'
-          index: vindex.db
-        - name: emea.iriseden
-          url: https://parrot-mirror.iriseden.eu
-          index: vindex.db
-    HU:
-      mirrors:
-        - name: 'emea.quantum'
-          url: 'https://quantum-mirror.hu/mirrors/pub/parrot'
-          index: vindex.db
+
     EE:
       mirrors:
-        - name: emea.cspacehosting
-          url: https://mirror.cspacehostings.com/parrotsec
-          index: vindex.db
-    UA:
+        - name: 'emea.cspacehosting'
+          url: 'https://mirror.cspacehostings.com/parrotsec'
+
+    RS:
       mirrors:
-        - name: emea.astra
-          url: https://parrot.astra.in.ua/
-          index: vindex.db
-        # disabled: no https support
-        #         and no https support
-    #    - name: 'emea.comsys'
-    #      url: 'http://mirrors.comsys.kpi.ua/parrot'
-    #      index: vindex.db.iso
+        - name: 'emea.sox'
+          url: 'https://mirror1.sox.rs/parrot/'
+
     RU:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
         - name: 'apac.yandex'
           url: 'https://mirror.yandex.ru/mirrors/parrot'
-          index: vindex.db
           blocked_countries: [ 'UA' ]
-        - name: apac.surf
-          url: https://mirror.surf/parrot
-          index: vindex.db
-        - name: 'apac.truenetwork'
-          url: 'https://mirror.truenetwork.ru/parrot'
-          index: vindex.db
+        - name: 'apac.repository'
+          url: 'https://repository.su/parrot/'
+
   AF:
     DEFAULT:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'emea.halifax'
-          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-          index: vindex.db
+
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot/'
+
         - name: 'emea.esslingen'
           url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-          index: vindex.db
-        - name: 'emea.nluug'
-          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-          index: vindex.db
+
         - name: 'emea.garr'
           url: 'https://parrot.mirror.garr.it/parrot'
-          index: vindex.db
+
   NA:
     DEFAULT:
       mirrors:
-        - name: ncsa.0xem
-          url: https://mirror.0xem.ma/parrot/
-          index: vindex.db
         - name: 'ncsa.mit'
           url: 'https://mirrors.mit.edu/parrot'
-          index: vindex.db
+
         - name: 'ncsa.clarkson'
           url: 'https://mirror.clarkson.edu/parrot'
-          index: vindex.db
+
+        - name: 'ncsa.princeton'
+          url: 'https://mirror.math.princeton.edu/pub/parrot/'
+
         - name: 'ncsa.osuosl'
           url: 'https://ftp.osuosl.org/pub/parrotos'
-          index: vindex.db
+
         - name: 'ncsa.berkeley'
           url: 'https://mirrors.ocf.berkeley.edu/parrot'
-          index: vindex.db
+
+        - name: 'ncsa.cicku'
+          url: 'https://mirrors.cicku.me/parrot/'
+
   SA:
     DEFAULT:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
+
         - name: 'ncsa.usp'
           url: 'http://sft.if.usp.br/parrot'
-          index: vindex.db
+
         - name: 'ncsa.cedia'
           url: 'https://mirror.cedia.org.ec/parrot'
-          index: vindex.db
-        - name: 'ncas.uta'
-          url: 'https://mirror.uta.edu.ec/parrot'
-          index: vindex.db
+
         - name: 'ncsa.ueb'
           url: 'https://mirror.ueb.edu.ec/parrot'
-          index: vindex.db
+
     EC:
       mirrors:
         - name: 'ncsa.cedia'
           url: 'https://mirror.cedia.org.ec/parrot'
-          index: vindex.db
-        - name: 'ncas.uta'
-          url: 'https://mirror.uta.edu.ec/parrot'
-          index: vindex.db
+
         - name: 'ncsa.ueb'
           url: 'https://mirror.ueb.edu.ec/parrot'
-          index: vindex.db
+
     BR:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
+
         - name: 'ncsa.usp'
           url: 'http://sft.if.usp.br/parrot'
-          index: vindex.db
+
   AS:
     DEFAULT:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+        - name: 'geo.rfc2549'
+          url: 'https://mirror.rfc2549.network'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-    BD:
+
+    AZ:
       mirrors:
-        - name: 'apac.alibaba'
-          url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'apac.amberit'
-          url: 'http://mirror.amberit.com.bd/parrotsec'
-          index: vindex.db
-    IN:
-      mirrors:
-        - name: 'apac.alibaba'
-          url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'apac.0x'
-          url: 'https://mirror.0x.sg/parrot'
-          index: vindex.db
-        - name: 'apac.nchc'
-          url: 'https://free.nchc.org.tw/parrot'
-          index: vindex.db
-        - name: 'emea.halifax'
-          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-          index: vindex.db
-        - name: 'emea.esslingen'
-          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-          index: vindex.db
-        - name: 'emea.nluug'
-          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-          index: vindex.db
-        - name: 'emea.garr'
-          url: 'https://parrot.mirror.garr.it/parrot'
-          index: vindex.db
-    IR:
-      mirrors:
-        - name: 'apac.mobinhost'
-          url: 'https://mirrors.mobinhost.com/parrot/'
-          index: vindex.db
-        - name: 'apac.alibaba'
-          url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'emea.halifax'
-          url: 'https://ftp.halifax.rwth-aachen.de/parrotsec'
-          index: vindex.db
-        - name: 'emea.esslingen'
-          url: 'https://ftp-stud.hs-esslingen.de/Mirrors/archive.parrotsec.org'
-          index: vindex.db
-        - name: 'emea.nluug'
-          url: 'https://ftp.nluug.nl/os/Linux/distr/parrot'
-          index: vindex.db
-        - name: 'emea.garr'
-          url: 'https://parrot.mirror.garr.it/parrot'
-          index: vindex.db
+        - name: 'emea.yerhosting'
+          url: 'https://mirror.yer.az/parrot/'
+        - name: 'emea.ourhost'
+          url: 'https://mirror.ourhost.az/parrot'
+
     TW:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
+
         - name: 'apac.nchc'
-          url: 'https://free.nchc.org.tw/parrot'
-          index: vindex.db
-    SG:
+          url: 'https://free.nchc.org.tw/parrot/'
+
+    JP:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+        - name: 'geo.rfc2549'
+          url: 'https://tokyo.mirror.rfc2549.network'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'apac.0x'
-          url: 'https://mirror.0x.sg/parrot'
-          index: vindex.db
-    KR:
-      mirrors:
-        - name: 'apac.alibaba'
-          url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: apac.krmir
-          url: https://mirror.krmir.org/parrot
-          index: vindex.db
+        - name: 'apac.sdcc'
+          url: 'https://mirror.hashy0917.net/parrot'
+
     CN:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
+
         - name: 'apac.ustc'
           url: 'https://mirrors.ustc.edu.cn/parrot'
-          index: vindex.db
-        - name: 'apac.shu'
-          url: 'http://mirrors.shu.edu.cn/parrot'
-          index: vindex.db
+
         - name: 'apac.sjtug'
           url: 'https://mirrors.sjtug.sjtu.edu.cn/parrot'
-          index: vindex.db
+
         - name: 'apac.tuna'
           url: 'https://mirrors.tuna.tsinghua.edu.cn/parrot'
-          index: vindex.db
+
     TH:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
+
         - name: 'apac.kku'
           url: 'https://mirror.kku.ac.th/parrot'
-          index: vindex.db
-        - name: 'apac.nipacloud'
-          url: 'https://mirrors.nipa.cloud/parrot'
-          index: vindex.db
+
     ID:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
+
         - name: 'apac.datautama'
-          url: 'http://kartolo.sby.datautama.net.id/parrot'
-          index: vindex.db
+          url: 'https://kartolo.sby.datautama.net.id/parrot'
+
+    BD:
+      mirrors:
+        - name: 'apac.amberit'
+          url: 'http://mirror.amberit.com.bd/parrotsec'
+
+    IN:
+      mirrors:
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+        - name: 'geo.rfc2549'
+          url: 'https://mumbai.mirror.rfc2549.network'
+        - name: 'geo.aliyun'
+          url: 'https://mirrors.aliyun.com/parrot/'
+
+        - name: 'apac.nxtgen'
+          url: 'https://mirrors.nxtgen.com/parrot-mirror'
+
+    IR:
+      mirrors:
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+        - name: 'geo.aliyun'
+          url: 'https://mirrors.aliyun.com/parrot/'
+
+        - name: 'emea.garr'
+          url: 'https://parrot.mirror.garr.it/parrot'
+
+    SG:
+      mirrors:
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+        - name: 'geo.rfc2549'
+          url: 'https://singapore.mirror.rfc2549.network'
+        - name: 'geo.aliyun'
+          url: 'https://mirrors.aliyun.com/parrot/'
+
+        - name: 'apac.0x'
+          url: 'https://mirror.0x.sg/parrot'
+
+    KR:
+      mirrors:
+        - name: 'apac.krmir'
+          url: 'https://mirror.krmir.org/parrot'
+
   OC:
     DEFAULT:
       mirrors:
-        - name: 'apac.alibaba'
+        - name: 'geo.bunny'
+          url: 'https://bunny.deb.parrot.sh/parrot'
+        - name: 'geo.rfc2549'
+          url: 'https://singapore.mirror.rfc2549.network'
+        - name: 'geo.aliyun'
           url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
+
         - name: 'apac.0x'
           url: 'https://mirror.0x.sg/parrot'
-          index: vindex.db
+
         - name: 'apac.nchc'
           url: 'https://free.nchc.org.tw/parrot'
-          index: vindex.db
     NZ:
       mirrors:
-        - name: 'apac.alibaba'
-          url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
         - name: 'apac.takeshi'
           url: 'https://mirrors.takeshi.nz/parrot'
-          index: vindex.db
-    NC:
-      mirrors:
-        - name: 'apac.alibaba'
-          url: 'https://mirrors.aliyun.com/parrot/'
-          index: vindex.db
-        - name: 'apac.lagoon'
-          url: 'https://mirror.lagoon.nc/pub/parrot'
-          index: vindex.db
